--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@ input{
     <div id="product_container">
         
     </div>
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
